# linalg.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  TODO.test  check-line-length.sh  install.sh  profile-test-suite.zsh  upload-docs.sh
macros/: Cargo.toml
macros/src/: lib.rs
src/: add.rs  add_assign.rs  at.rs  chain.rs  col.rs  cols.rs  common.rs  complex.rs  debug.rs  diag.rs  eq.rs  error.rs  identity.rs  index.rs  iter.rs  len.rs  lib.rs  linear.rs  main.rs  mat.rs  mul.rs  mutcols.rs  mutrows.rs  notsafe.rs  order.rs  prelude.rs  private.rs  product.rs  raw.rs  row.rs  rows.rs  scaled.rs  show.rs  slice.rs  strided.rs  stripes.rs  sub.rs  sub_assign.rs  submat.rs  submat_mut.rs  (+8 more)
src/array/: mod.rs  traits.rs
src/bench/: mod.rs
src/blas/: axpy.rs  copy.rs  dot.rs  ffi.rs  gemm.rs  gemv.rs  mod.rs
src/mat/: col.rs  cols.rs  diag.rs  mod.rs  mutcol.rs  mutcols.rs  mutdiag.rs  mutrow.rs  mutrows.rs  mutview.rs  row.rs  rows.rs  traits.rs  view.rs
src/mutview/: col.rs  cols.rs  diag.rs  mod.rs  mutcol.rs  mutcols.rs  mutdiag.rs  mutrow.rs  mutrows.rs  mutview.rs  row.rs  rows.rs  view.rs
src/nn/: README.md  fetch_data.sh  images.rs  labels.rs  mod.rs  network.rs
src/ops/: blas.rs  chain.rs  eval.rs  inv.rs  mat.rs  mcop.rs  mod.rs  product.rs  raw.rs  reduce.rs  scaled.rs
src/raw/: cols.rs  mod.rs  rows.rs  strided.rs  view.rs
src/strided/: col.rs  diag.rs  mod.rs  raw.rs  row.rs  slice.rs  stripes.rs  vector.rs
src/test/: mat.rs  mod.rs  vec.rs
src/transposed/: cols.rs  mod.rs  rows.rs  stripes.rs
src/vec/: mod.rs
src/view/: col.rs  cols.rs  diag.rs  mod.rs  row.rs  rows.rs  view.rs
tests/: add_assign_col.rs  add_assign_diag.rs  add_assign_mat.rs  add_assign_row.rs  add_assign_trans_mat.rs  add_assign_trans_view_mut.rs  add_assign_view_mut.rs  add_col_gemv.rs  add_mat_axpy.rs  add_mat_gemm.rs  add_row_gemv.rs  at.rs  at_mut.rs  col.rs  col_mut.rs  cols.rs  cols_rev.rs  debug.rs  diag.rs  diag_mut.rs  eval_chain.rs  eval_col_chain.rs  eval_row_chain.rs  eval_row_chain_col.rs  hsplit.rs  hstripes.rs  hstripes_rev.rs  index.rs  index_mut.rs  inv.rs  iter.rs  iter_mut.rs  iter_mut_rev.rs  iter_rev.rs  mat.rs  mul_assign_mat.rs  mul_mat.rs  mul_row.rs  mul_row_col.rs  mul_trans_mat.rs  (+40 more)
tests/cfail/: mat.rs  outlive.rs
tests/mat_mul/: col.rs  mod.rs
tests/mutview_mul/: col.rs  mod.rs
(+146 files in other folders)
