[package]

name = "linalg"
version = "0.0.0"
authors = ["Jorge Aparicio <japaricious@gmail.com>"]

[features]
macros = ["linalg_macros"]

[dependencies]
rand = "*"

[dependencies.assign]
git = "https://github.com/japaric/assign.rs"

[dependencies.blas]
git = "https://github.com/japaric/blas.rs"

[dependencies.cast]
git = "https://github.com/japaric/cast.rs"

[dependencies.complex]
git = "https://github.com/japaric/complex.rs"

[dependencies.onezero]
git = "https://github.com/japaric/onezero.rs"

[dependencies.linalg_macros]
optional = true
path = "macros"

[dev-dependencies.approx]
git = "https://github.com/japaric/approx.rs"

[dev-dependencies.quickcheck]
git = "https://github.com/burntsushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/burntsushi/quickcheck"

[profile.test]
debug = false
