[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
name = "linalg"
version = "0.0.0"

[features]
macros = ["linalg_macros"]

[dependencies.blas]
git = "https://github.com/japaric/blas.rs"

[dependencies.cast]
git = "https://github.com/japaric/cast.rs"

[dependencies.complex]
git = "https://github.com/japaric/complex.rs"

[dependencies.extract]
git = "https://github.com/japaric/extract.rs"

[dependencies.lapack]
git = "https://github.com/japaric/lapack.rs"

[dependencies.linalg_macros]
optional = true
path = "macros"

[dependencies.onezero]
git = "https://github.com/japaric/onezero.rs"

[dev-dependencies]
rand = "*"

[dev-dependencies.approx]
git = "https://github.com/japaric/approx.rs"

[dev-dependencies.linalg_macros]
path = "macros"

[dev-dependencies.quickcheck]
git = "https://github.com/burntsushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/burntsushi/quickcheck"
